written an introduction

--- a/service/sources.bib
+++ b/service/sources.bib
@@ -1,5 +1,21 @@
+@book{jablonka2014,
+  title = {Evolution in {{Four Dimensions}}: {{Genetic}}, {{Epigenetic}}, {{Behavioral}}, and {{Symbolic Variation}} in the {{History}} of {{Life}}},
+  shorttitle = {Evolution in {{Four Dimensions}}},
+  author = {Jablonka, Eva and Lamb, Marion J.},
+  editor = {Wilson, Robert A. and Sterelny, Kim},
+  year = {2014},
+  month = mar,
+  series = {Life and {{Mind}}: {{Philosophical Issues}} in {{Biology}} and {{Psychology}}},
+  edition = {Revised Edition},
+  publisher = {{A Bradford Book}},
+  address = {{Cambridge, MA, USA}},
+  abstract = {A pioneering proposal for a pluralistic extension of evolutionary theory, now updated to reflect the most recent research.},
+  isbn = {978-0-262-52584-8},
+  langid = {english}
+}
+
 @misc{lee2023,
-  title = {{{Outsourcing Memory Through Niche Construction}}},
+  title = {🔥 {{Outsourcing Memory Through Niche Construction}}},
   author = {Lee, Edward D. and Flack, Jessica C. and Krakauer, David C.},
   year = {2023},
   month = jan,
@@ -17,6 +33,31 @@
   file = {/Users/valerii/Zotero/storage/2S9GPQN7/Lee et al_2023_Outsourcing Memory Through Niche Construction.pdf}
 }
 
+@book{levins1985,
+  title = {The {{Dialectical Biologist}}},
+  author = {Levins, Richard and Lewontin, Richard},
+  year = {1985},
+  publisher = {{Harvard University Press}},
+  abstract = {Scientists act within a social context and from a philosophical perspective that is inherently political. Whether they realize it or not, scientists always choose sides. The Dialectical Biologist explores this political nature of scientific inquiry, advancing its argument within the framework of Marxist dialectic. These essays stress the concepts of continual change and codetermination between organism and environment, part and whole, structure and process, science and politics. Throughout, this book questions our accepted definitions and biases, showing the self-reflective nature of scientific activity within society.},
+  isbn = {978-0-674-20283-2},
+  langid = {english},
+  keywords = {Science / Life Sciences / Biology,Science / Philosophy \& Social Aspects}
+}
+
+@book{okasha2012,
+  title = {Evolution and {{Rationality}}: {{Decisions}}, {{Co-operation}} and {{Strategic Behaviour}}},
+  shorttitle = {Evolution and {{Rationality}}},
+  author = {Okasha, Samir and Binmore, Ken},
+  year = {2012},
+  month = jun,
+  publisher = {{Cambridge University Press}},
+  abstract = {This volume explores from multiple perspectives the subtle and interesting relationship between the theory of rational choice and Darwinian evolution. In rational choice theory, agents are assumed to make choices that maximize their utility; in evolution, natural selection 'chooses' between phenotypes according to the criterion of fitness maximization. So there is a parallel between utility in rational choice theory and fitness in Darwinian theory. This conceptual link between fitness and utility is mirrored by the interesting parallels between formal models of evolution and rational choice. The essays in this volume, by leading philosophers, economists, biologists and psychologists, explore the connection between evolution and rational choice in a number of different contexts, including choice under uncertainty, strategic decision making and pro-social behaviour. They will be of interest to students and researchers in philosophy of science, evolutionary biology, economics and psychology.},
+  googlebooks = {vkqq2RzRox8C},
+  isbn = {978-1-107-00499-3},
+  langid = {english},
+  keywords = {Philosophy / General,Philosophy / Movements / Humanism,Science / Life Sciences / Evolution,Science / Philosophy \& Social Aspects}
+}
+
 @book{sterelny2003,
   title = {Thought in a Hostile World: The Evolution of Human Cognition},
   shorttitle = {Thought in a Hostile World},
@@ -27,4 +68,20 @@
   isbn = {978-0-631-18886-5 978-0-631-18887-2},
   lccn = {BF698.95 .S74 2003},
   keywords = {020\_on-turner-social,Brain,Cognition,Cognition and culture,Evolution,Evolutionary psychology,on-turner-social,poss\_article}
+}
+
+@incollection{sterelny2012,
+  title = {From Fitness to Utility},
+  booktitle = {Evolution and {{Rationality}}},
+  author = {Sterelny, Kim},
+  editor = {Binmore, Ken and Okasha, Samir},
+  year = {2012},
+  pages = {246--273},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9780511792601.012},
+  urldate = {2021-10-13},
+  isbn = {978-0-511-79260-1},
+  langid = {english},
+  file = {/Users/valerii/Obsidian/Fleeting Notes/sterelny2012 - Extracted Annotations (25.12.2021, 150207).md;/Users/valerii/Zotero/storage/RWAUIPXN/Sterelny - 2012 - From fitness to utility.pdf}
 }
