added bibliography file

--- a/service/bibliography.bib
+++ b/service/bibliography.bib
@@ -1,11 +1,99 @@
+@book{jablonka2014,
+  title = {Evolution in {{Four Dimensions}}: {{Genetic}}, {{Epigenetic}}, {{Behavioral}}, and {{Symbolic Variation}} in the {{History}} of {{Life}}},
+  shorttitle = {Evolution in {{Four Dimensions}}},
+  author = {Jablonka, Eva and Lamb, Marion J.},
+  editor = {Wilson, Robert A. and Sterelny, Kim},
+  year = {2014},
+  month = mar,
+  series = {Life and {{Mind}}: {{Philosophical Issues}} in {{Biology}} and {{Psychology}}},
+  edition = {Revised Edition},
+  publisher = {{A Bradford Book}},
+  address = {{Cambridge, MA, USA}},
+  abstract = {A pioneering proposal for a pluralistic extension of evolutionary theory, now updated to reflect the most recent research.},
+  isbn = {978-0-262-52584-8},
+  langid = {english}
+}
+
+@misc{lee2023,
+  title = {🔥 {{Outsourcing Memory Through Niche Construction}}},
+  author = {Lee, Edward D. and Flack, Jessica C. and Krakauer, David C.},
+  year = {2023},
+  month = jan,
+  primaryclass = {New Results},
+  pages = {2022.09.01.506204},
+  publisher = {{bioRxiv}},
+  doi = {10.1101/2022.09.01.506204},
+  urldate = {2023-11-18},
+  abstract = {Adaptation to changing environments is a universal feature of life and can involve the organism modifying itself in response to the environment as well as actively modifying the environment to control selection pressures. The latter case couples the organism to environment. Then, how quickly should the organism change in response to the environment? We formulate this question in terms of how memory duration scales with environmental rate of change when there are trade-offs in remembering vs. forgetting. We derive a universal scaling law for optimal memory duration, taking into account memory precision as well as two components of environmental volatility, bias and stability. We find sublinear scaling with any amount of environmental volatility. We use a memory complexity measure to explore the strategic conditions (game dynamics) favoring actively reducing environmental volatility{\textemdash}outsourcing memory through niche construction{\textemdash}over investing in neural tissue. We predict stabilizing niche construction will evolve when neural tissue is costly, the environment is variable, and it is beneficial to be able to encode a rich repertoire of environmental states. Significance Statement All organisms must adapt to changing environments, but adaptation can modify the environment itself. We solve a version of this problem in terms of how long organisms remember. Shorter memory should be better for variable environments and longer for slow changing ones, but environmental variability depends on feedback. Surprisingly, we find the same mathematical law in both cases, revealing how much shorter memory should be relative to the environmental timescale. We consider how this depends on memory complexity and metabolic costs in populations, allowing us to predict a general set of conditions for when organism will outsource memory to the environment: when maintaining a brain is costly, the environment fluctuates quickly, and organisms inhabit a complex environment.},
+  archiveprefix = {bioRxiv},
+  chapter = {New Results},
+  copyright = {{\textcopyright} 2023, Posted by Cold Spring Harbor Laboratory. This pre-print is available under a Creative Commons License (Attribution-NonCommercial-NoDerivs 4.0 International), CC BY-NC-ND 4.0, as described at http://creativecommons.org/licenses/by-nc-nd/4.0/},
+  langid = {english},
+  keywords = {🔥,Externalization of prediction enables cooperation},
+  file = {/Users/valerii/Zotero/storage/2S9GPQN7/Lee et al_2023_Outsourcing Memory Through Niche Construction.pdf}
+}
+
+@book{levins1985,
+  title = {The {{Dialectical Biologist}}},
+  author = {Levins, Richard and Lewontin, Richard},
+  year = {1985},
+  publisher = {{Harvard University Press}},
+  abstract = {Scientists act within a social context and from a philosophical perspective that is inherently political. Whether they realize it or not, scientists always choose sides. The Dialectical Biologist explores this political nature of scientific inquiry, advancing its argument within the framework of Marxist dialectic. These essays stress the concepts of continual change and codetermination between organism and environment, part and whole, structure and process, science and politics. Throughout, this book questions our accepted definitions and biases, showing the self-reflective nature of scientific activity within society.},
+  isbn = {978-0-674-20283-2},
+  langid = {english},
+  keywords = {Science / Life Sciences / Biology,Science / Philosophy \& Social Aspects}
+}
+
+@book{okasha2012,
+  title = {Evolution and {{Rationality}}: {{Decisions}}, {{Co-operation}} and {{Strategic Behaviour}}},
+  shorttitle = {Evolution and {{Rationality}}},
+  author = {Okasha, Samir and Binmore, Ken},
+  year = {2012},
+  month = jun,
+  publisher = {{Cambridge University Press}},
+  abstract = {This volume explores from multiple perspectives the subtle and interesting relationship between the theory of rational choice and Darwinian evolution. In rational choice theory, agents are assumed to make choices that maximize their utility; in evolution, natural selection 'chooses' between phenotypes according to the criterion of fitness maximization. So there is a parallel between utility in rational choice theory and fitness in Darwinian theory. This conceptual link between fitness and utility is mirrored by the interesting parallels between formal models of evolution and rational choice. The essays in this volume, by leading philosophers, economists, biologists and psychologists, explore the connection between evolution and rational choice in a number of different contexts, including choice under uncertainty, strategic decision making and pro-social behaviour. They will be of interest to students and researchers in philosophy of science, evolutionary biology, economics and psychology.},
+  googlebooks = {vkqq2RzRox8C},
+  isbn = {978-1-107-00499-3},
+  langid = {english},
+  keywords = {Philosophy / General,Philosophy / Movements / Humanism,Science / Life Sciences / Evolution,Science / Philosophy \& Social Aspects}
+}
+
+@book{skyrms2003,
+  title = {The {{Stag Hunt}} and the {{Evolution}} of {{Social Structure}}},
+  author = {Skyrms, Brian},
+  year = {2003},
+  month = dec,
+  edition = {1},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/CBO9781139165228},
+  urldate = {2021-07-23},
+  isbn = {978-0-521-53392-8 978-0-521-82651-8 978-1-139-16522-8}
+}
+
 @book{sterelny2003,
-  title      = {Thought in a Hostile World: The Evolution of Human Cognition},
+  title = {Thought in a Hostile World: The Evolution of Human Cognition},
   shorttitle = {Thought in a Hostile World},
-  author     = {Sterelny, Kim},
-  year       = {2003},
-  publisher  = {{Blackwell}},
-  address    = {{Malden, MA}},
-  isbn       = {978-0-631-18886-5 978-0-631-18887-2},
-  lccn       = {BF698.95 .S74 2003},
-  keywords   = {020\_on-turner-social,Brain,Cognition,Cognition and culture,Evolution,Evolutionary psychology,on-turner-social,poss\_article}
+  author = {Sterelny, Kim},
+  year = {2003},
+  publisher = {{Blackwell}},
+  address = {{Malden, MA}},
+  isbn = {978-0-631-18886-5 978-0-631-18887-2},
+  lccn = {BF698.95 .S74 2003},
+  keywords = {020\_on-turner-social,Brain,Cognition,Cognition and culture,Evolution,Evolutionary psychology,on-turner-social,poss\_article}
+}
+
+@incollection{sterelny2012,
+  title = {From Fitness to Utility},
+  booktitle = {Evolution and {{Rationality}}},
+  author = {Sterelny, Kim},
+  editor = {Binmore, Ken and Okasha, Samir},
+  year = {2012},
+  pages = {246--273},
+  publisher = {{Cambridge University Press}},
+  address = {{Cambridge}},
+  doi = {10.1017/CBO9780511792601.012},
+  urldate = {2021-10-13},
+  isbn = {978-0-511-79260-1},
+  langid = {english},
+  file = {/Users/valerii/Obsidian/Fleeting Notes/sterelny2012 - Extracted Annotations (25.12.2021, 150207).md;/Users/valerii/Zotero/storage/RWAUIPXN/Sterelny - 2012 - From fitness to utility.pdf}
 }
