--- a/service/sources.bib
+++ b/service/sources.bib
@@ -58,6 +58,18 @@
   keywords = {Philosophy / General,Philosophy / Movements / Humanism,Science / Life Sciences / Evolution,Science / Philosophy \& Social Aspects}
 }
 
+@book{skyrms2003,
+  title = {The {{Stag Hunt}} and the {{Evolution}} of {{Social Structure}}},
+  author = {Skyrms, Brian},
+  year = {2003},
+  month = dec,
+  edition = {1},
+  publisher = {{Cambridge University Press}},
+  doi = {10.1017/CBO9781139165228},
+  urldate = {2021-07-23},
+  isbn = {978-0-521-53392-8 978-0-521-82651-8 978-1-139-16522-8}
+}
+
 @book{sterelny2003,
   title = {Thought in a Hostile World: The Evolution of Human Cognition},
   shorttitle = {Thought in a Hostile World},
